Fix for manage-landing-page x overflow

--- a/manage-landing-page-master/app/styles/_globals.scss
+++ b/manage-landing-page-master/app/styles/_globals.scss
@@ -7,6 +7,7 @@ html{
     font-family: $font;
     font-size: 16px;
     background-color: #fff; 
+    overflow-x: hidden;
 }
 
 body{
