--- a/manage-landing-page-master/app/styles/styles.css
+++ b/manage-landing-page-master/app/styles/styles.css
@@ -8,6 +8,7 @@ html {
   font-family: "Be Vietnam", sans-serif;
   font-size: 16px;
   background-color: #fff;
+  overflow-x: hidden;
 }
 
 body {
